--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,11 +1,12 @@
 # YouTube Summarizer Configuration
 
 app:
-  check_frequency: "daily"  # daily, weekly, hourly
-  email_frequency: "weekly" # daily, weekly
+  # Maximum videos to process on first run (to avoid overwhelming when starting fresh)
+  max_videos_on_first_run: 2
 
 youtube:
-  max_videos_per_channel: 2
+  # Maximum videos to process per channel each run
+  max_videos_per_channel: 1
 
 processing:
   max_concurrent_videos: 3
